--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@ let audioBuffer = null;
 let audioStartTime = 0;
 let currentKey = null;
 
-let poseUntil = 0;
-let lastPoseFrame = null;
-const MIN_HOLD = 0.12;
-
 const sprite = new Image();
 sprite.src = "bf-testing.png";
 
@@ -47,20 +43,8 @@ const keyFrames = {
     "ARROWDOWN": 8
 };
 
-window.addEventListener("keydown", (e) => {
-    if (!audioContext) return;
-
-    const key = e.key.toUpperCase();
-    if (keyFrames[key] !== undefined) {
-        currentKey = key;
-        lastPoseFrame = keyFrames[key];
-        poseUntil = audioContext.currentTime + MIN_HOLD;
-    }
-});
-
-window.addEventListener("keyup", () => {
-    currentKey = null;
-});
+window.addEventListener("keydown", (e) => { currentKey = e.key.toUpperCase(); });
+window.addEventListener("keyup", () => { currentKey = null; });
 
 canvas.addEventListener("click", () => {
     if (audioContext) return;
@@ -100,28 +84,21 @@ function drawSpriteFrame(frameIndex) {
 function drawFrame() {
     if (!audioContext) return;
 
-    const nowAbs = audioContext.currentTime;
-    const t = nowAbs - audioStartTime;
+    const t = audioContext.currentTime - audioStartTime;
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 
     if (currentKey && keyFrames[currentKey] !== undefined) {
-        const frame = keyFrames[currentKey];
-        lastPoseFrame = frame;
-        poseUntil = nowAbs + MIN_HOLD;
-        drawSpriteFrame(frame);
+        drawSpriteFrame(keyFrames[currentKey]);
         return;
     }
 
-    if (nowAbs < poseUntil && lastPoseFrame !== null) {
-        drawSpriteFrame(lastPoseFrame);
-        return;
-    }
     const tick = Math.floor(t * TICK_RATE);
     const animFrame = Math.floor(tick / HOLD_TICKS) % TOTAL_ANIM_FRAMES;
     const spriteFrame = linearFrames[animFrame];
 
     drawSpriteFrame(spriteFrame);
 }
+
 </script>
 </body>
 </html>
