--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 <title>Sprite Test</title>
 <style>
     body { background: #111; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-    canvas { background: #222; border: 2px solid #555; }
+    canvas {
+    background: #222;
+    border: 2px solid #555;
+    width: 100%;
+    height: 100%;
+}
+
 </style>
 </head>
 <body>
