--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
 <title>Sprite Test</title>
 <style>
     body { background: #111; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-    canvas {
-    background: #222;
-    border: 2px solid #555;
-    width: 100%;
-    height: 100%;
-}
-
+    canvas { background: #222; border: 2px solid #555; }
 </style>
 </head>
 <body>
 
-<canvas id="spriteCanvas"></canvas>
+<canvas id="spriteCanvas" width="800" height="800"></canvas>
 
 <script>
 const canvas = document.getElementById("spriteCanvas");
