--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ let audioStartTime = 0;
 let currentKey = null;
 
 const sprite = new Image();
-sprite.src = "bf-testing.png";
+sprite.src = "bf-test.png";
 
 const keyFrames = {
     "ARROWLEFT": 5,
